tests/ui/rfcs/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0277]: the trait bound `u32: ~const Plus` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:5
   |
LL |     a.plus(b)
   |     ^ the trait `Plus` is not implemented for `u32`
   |
   = help: the trait `Plus` is implemented for `u32`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
